--- a/AdaptiveVisualAcuityTest.html
+++ b/AdaptiveVisualAcuityTest.html
@@ -9,6 +9,7 @@
   <script src="jspsych/plugin-browser-check.js"></script>
   <script src="jspsych/plugin-html-keyboard-response.js"></script>
   <script src="jspsych/plugin-instructions.js"></script>
+  <script src="jspsych/plugin-resize.js"></script>
   <script src="jspsych/jspsych-psychophysics-3.1.0/jspsych-psychophysics.js" type="text/javascript"></script>
   <link href="jspsych/jspsych.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="experiment_style_black.css" />
@@ -22,13 +23,6 @@
       height: 100%;
       align-items: center;
       justify-content: center;
-    }
-
-    .vertical-line {
-      height: 20vh;
-      width: 2px;
-      background: white;
-      margin-bottom: 5px;
     }
   </style>
   <div id="experiment-container">
@@ -59,8 +53,25 @@
 
   const timeline = [];
 
+  // ---------: SETTINGS : ------------- //
   const taskQuestionTimeLimit = 5000;
-  const ITI = 500;
+  // inter-trial interval
+  const ITI = 0;
+  const pixelsPerMm = 10;
+  const startHorizDistanceMm = 10;
+  const verticalDistanceMm = 5
+  const lineHeighthMm = 50
+  const lineWidthMm = 1
+  // experiment ends after how many reversals?
+  // reversal = correct -> incorrect OR incorrect -> correct trial pair
+  const reversalLimit = 10;
+  // edge case: pp can reliably identify 1px distance so reversals don't happen
+  // after how many repetitions of minimum distance trials should experiment end?
+  const minDistanceRepLimit = 10
+  // --------------------------------- //
+
+  let reversalCounter = 0;
+  let minDistanceRepCounter = 0
 
   function getRandomDirection() {
     return Math.random() > .5 ? "left" : "right"
@@ -115,9 +126,6 @@
   timeline.push(setup_info);
 
 
-  // Measure monitor size to scale stimuli using the resize plugin - skip as this is purely auditory
-
-
   // welcome message
   const welcome_message = {
     type: jsPsychHtmlKeyboardResponse,
@@ -137,9 +145,21 @@
 
   timeline.push(TaskInstructions);
 
+  // Measure monitor size to scale stimuli using the resize plugin - skip as this is purely auditory
+  const resize = {
+    type: jsPsychResize,
+    item_width: 85.6,
+    item_height: 53.97,
+    prompt: "<p>Click and drag the lower right corner of the box until the box is the same size as a credit card held up to the screen.</p>",
+    pixels_per_unit: pixelsPerMm,
+    starting_size: 200,
+  };
+  timeline.push(resize);
+
   let trialProperties = {
     direction: getRandomDirection(),
-    distance: 1, // start with 1cm
+    distance: startHorizDistanceMm,
+    isMinDistance: false,
   };
 
   // trial
@@ -149,10 +169,17 @@
     choices: ['ArrowLeft', 'ArrowRight'],
     on_start: function (trial) {
       const directionNum = trialProperties.direction == "right" ? 1 : -1;
-      const translate = trialProperties.distance * directionNum
-      // stimulus container gets nudged horizontally within +/- 10cm from centre of screen
-      trial.stimulus = `<div id="stimulus-container" style="transform:translateX(${~~(Math.random() * 1000) / 100}cm);">
-  <div id="top" class="vertical-line" style="transform:translateX(${translate}cm);"></div>
+      const translate = trialProperties.distance * directionNum * pixelsPerMm
+      // stimulus container gets nudged horizontally within +/- 5cm from centre of screen
+      trial.stimulus = `<div id="stimulus-container" style="transform:translateX(${(Math.random() * pixelsPerMm * 50 * 100) / 100}px);">
+  <style>
+    .vertical-line {
+      height: ${lineHeighthMm * pixelsPerMm}px;
+      width: ${lineWidthMm * pixelsPerMm}px;
+      background: white;
+    }
+  </style>
+  <div id="top" class="vertical-line" style="transform:translateX(${translate}px);margin-bottom:${verticalDistanceMm * pixelsPerMm}px;"></div>
   <div id="bottom" class="vertical-line"></div>
 </div>`;
     },
@@ -162,9 +189,26 @@
       data.distance = trialProperties.distance
       const cor = data.response ? data.response.toLowerCase().includes(data.direction) : false;
       data.correct = cor
+      const newDistance = cor ?
+        // if correct, distance gets smaller, but no smaller than 1px
+        // distance gets rounded to the nearest pixel
+        Math.max(Math.round(data.distance / 4 * pixelsPerMm), 1) / pixelsPerMm :
+        // if incorrect, distance gets larger, but not larger than initial distance
+        Math.min(startHorizDistanceMm, data.distance *
+          2);
+      const currentMinDistance = newDistance === 1 / pixelsPerMm // is current distance 1px?
+      // increase min dist counter if both last and current trial distance was 1px
+      if (currentMinDistance && trialProperties.isMinDistance) minDistanceRepCounter++
       trialProperties = {
         direction: getRandomDirection(),
-        distance: cor ? data.distance / 4 : data.distance * 2,
+        distance: newDistance,
+        isMinDistance: currentMinDistance
+      }
+      prevData = jsPsych.data.get().last(2).values()[0]
+      if (typeof prevData.correct !== 'undefined' && prevData.correct !== cor) {
+        reversalCounter++
+        // reset minDistanceRepCounter after reversal
+        minDistanceRepCounter = 0
       }
     },
     response_ends_trial: true,
@@ -173,7 +217,10 @@
 
   const trial_procedure = {
     timeline: [present_stimulus],
-    repetitions: 10
+    loop_function: function (data) {
+      return (reversalCounter < reversalLimit) && (minDistanceRepCounter <
+        minDistanceRepLimit)
+    }
   }
 
   timeline.push(trial_procedure);
@@ -184,7 +231,11 @@
     type: jsPsychHtmlKeyboardResponse,
     stimulus: '<p>All done!</p><p>Press any key to end</p>',
     choices: "ALL_KEYS",
-    response_ends_trial: true
+    response_ends_trial: true,
+    // unresize
+    on_start: function () {
+      document.getElementById("jspsych-content").style.transform = "scale(1)";
+    }
   };
   timeline.push(DebriefMessage);
 
