Centring of stimuli improved

--- a/AdaptiveVisualAcuityTest.html
+++ b/AdaptiveVisualAcuityTest.html
@@ -16,6 +16,17 @@
 
 <body>
   <style>
+    .jspsych-content-wrapper {
+      height: 100%;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .jspsych-content {
+      margin: 0;
+      height: fit-content;
+    }
+
     #stimulus-container {
       display: flex;
       flex-direction: column;
